# pydantic-ai-evals-examples

./: .gitignore  README.md
monty-data-science/: .env.example  .gitignore  DEMO.md  Makefile  OPTIMIZER_PROMPT.md  README.md  pyproject.toml
monty-data-science/evals/: conftest.py  run_eval.py  test_eval.py
monty-data-science/evals/datasets/: large.yaml  medium.yaml  small.yaml
monty-data-science/src/monty_data_science/: __init__.py  __main__.py  agent.py  datasets.py  demo.py  demo_config.py  demo_prompts.py  demo_questions.py  evaluators.py  live.py  logfire_links.py  quiet_code_mode.py  reset_prompt.py  seed_demo_variable.py  tools.py  verify_spans.py
twenty-questions/: .env.example  .gitignore  Makefile  pyproject.toml
twenty-questions/evals/: __init__.py  conftest.py  run_eval.py  test_eval.py
twenty-questions/evals/datasets/: quick_test.yaml  twenty_questions.yaml
twenty-questions/src/twenty_questions/: __init__.py  __main__.py  agent.py  datasets.py  evaluators.py  live.py  tools.py
