[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "twenty-questions"
version = "0.1.0"
description = "20 Questions eval — agent guesses a secret item via yes/no questions"
requires-python = ">=3.12"
dependencies = [
    "pydantic-ai[logfire]>=1.102.0",
    "pydantic-evals[logfire]>=1.102.0",
    "logfire>=3.0.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-timeout>=2.3.0",
    "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/twenty_questions"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["evals"]
timeout = 600

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I", "B", "C4", "UP"]
